# dynamicfusion

./: CMakeLists.txt
apps/: CMakeLists.txt  demo.cpp
kfusion/include/kfusion/: kinfu.hpp
kfusion/src/: kinfu.cpp  warp_field.cpp
kfusion/src/cuda/: device.hpp
tests/: CMakeLists.txt
